# cli-parser

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
include/cli/: cli.h
lib/: CMakeLists.txt  cli_internal.h  error.c  init.c  option.c  parser.c
src/: CMakeLists.txt  main.c  parser.c  parser.h
test/: CMakeLists.txt  test_simple.c
